--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "test": "echo \"Test tes\"",
     "postinstall": "bower install",
-
     "prestart": "npm install",
     "start": "http-server -a localhost -p 1337 -c-1 ./app"
   },
@@ -23,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/keanpaderes/cmsc142-nchancellors/issues"
   },
-  "homepage": "https://github.com/keanpaderes/cmsc142-nchancellors#readme"
+  "homepage": "https://github.com/keanpaderes/cmsc142-nchancellors#readme",
+  "devDependencies": {
+    "bower": "1.8.0",
+    "http-server": "0.9.0"
+  }
 }
