--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Test tes\"",
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 1337 -c-1 ./app"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,12 @@
   "devDependencies": {
     "bower": "1.8.0",
     "http-server": "0.9.0"
+  },
+  "dependencies": {
+    "body-parser": "1.17.1",
+    "express": "4.15.2",
+    "method-override": "2.3.8",
+    "morgan": "1.8.1",
+    "python-shell": "0.4.0"
   }
 }
